--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 	  text-align:center;
 	  }
 	  
+	  h2{
+	  text-align:center;
+	  }
+	  
 	  div{
 	  background-color: #F02C11;
 	  height: 50px;
@@ -45,7 +49,9 @@
    <h1>
     Number Base Changer
    </h1>
-   
+   <h2>
+   (Only supports bases from 2-10)
+   </h2>
    <div>
     <label for="number"><strong>Enter your number in base 10:</strong></label>
 	<input id="numberInput" type="number">
