changed the color of the webpage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       html {
         font-family: 'Mukta', sans-serif;
 		font-size: 30px;
-		background-color: #2658EA;
       }
 
       body {
@@ -28,7 +27,7 @@
 	  }
 	  
 	  div{
-	  background-color: #F02C11;
+	  background-color: #DCDBBD;
 	  height: 50px;
 	  }
 	  
@@ -39,7 +38,7 @@
 
       p {
         color: black;
-		background-color: #F02C11;
+		background-color: #DCDBBD;
         padding: 3px;
 		visibility:hidden;
       }
